@@ -45,7 +45,6 @@ import javax.servlet.http.HttpServletRequest;
 import org.apache.commons.lang.StringUtils;
 import org.apache.log4j.Logger;
 import org.bouncycastle.cms.CMSException;
-import org.cesecore.ErrorCode;
 import org.cesecore.authentication.tokens.AlwaysAllowLocalAuthenticationToken;
 import org.cesecore.authentication.tokens.AuthenticationToken;
 import org.cesecore.authorization.AuthorizationDeniedException;
@@ -59,12 +58,8 @@ import org.cesecore.certificates.certificateprofile.CertificateProfile;
 import org.cesecore.certificates.endentity.EndEntityConstants;
 import org.cesecore.certificates.endentity.EndEntityInformation;
 import org.cesecore.certificates.endentity.ExtendedInformation;
-import org.cesecore.certificates.util.AlgorithmConstants;
-import org.cesecore.certificates.util.AlgorithmTools;
 import org.cesecore.config.CesecoreConfiguration;
 import org.cesecore.roles.management.RoleSessionLocal;
-import org.cesecore.util.CertTools;
-import org.cesecore.util.StringTools;
 import org.ejbca.core.EjbcaException;
 import org.ejbca.core.ejb.authorization.AuthorizationSystemSession;
 import org.ejbca.core.ejb.ra.NoSuchEndEntityException;
@@ -85,7 +80,12 @@ import org.ejbca.core.model.ra.CustomFieldException;
 import org.ejbca.core.model.ra.raadmin.EndEntityProfile;
 import org.ejbca.core.model.ra.raadmin.EndEntityProfileValidationException;
 
+import com.keyfactor.ErrorCode;
+import com.keyfactor.util.CertTools;
+import com.keyfactor.util.StringTools;
 import com.keyfactor.util.crypto.algorithm.AlgorithmConfigurationCache;
+import com.keyfactor.util.crypto.algorithm.AlgorithmConstants;
+import com.keyfactor.util.crypto.algorithm.AlgorithmTools;
 
 /**
  * Managed bean that backs up the enrollwithrequestid.xhtml page
@@ -213,7 +213,7 @@ public class EnrollWithRequestIdBean implements Serializable {
         if (generatedToken != null) {
             try {
                 Certificate certificate = CertTools.getCertfromByteArray(generatedToken, Certificate.class);
-                byte[] pemToDownload = CertTools.getPemFromCertificateChain(Arrays.asList(certificate));
+                byte[] pemToDownload = CertTools.getPemFromCertificateChain(List.of(certificate));
                 downloadToken(pemToDownload, "application/octet-stream", ".pem");
             } catch (CertificateParsingException | CertificateEncodingException e) {
                 log.info(e);
@@ -660,38 +660,14 @@ public class EnrollWithRequestIdBean implements Serializable {
 
     /** Validate an uploaded CSR and store the extracted key algorithm and CSR for later use. */
     public void validateCsr(FacesContext context, UIComponent component, Object value) throws ValidatorException {
-        selectedAlgorithm = null;
-        final String valueStr = value.toString();
-        if (valueStr != null && valueStr.length() > EnrollMakeNewRequestBean.MAX_CSR_LENGTH) {
-            log.info("CSR uploaded was too large: "+valueStr.length());
-            throw new ValidatorException(new FacesMessage(raLocaleBean.getMessage("enroll_invalid_certificate_request")));
-        }
-        RequestMessage certificateRequestMessage = RequestMessageUtils.parseRequestMessage(valueStr.getBytes());
-        if (certificateRequestMessage == null) {
-            throw new ValidatorException(new FacesMessage(raLocaleBean.getMessage("enroll_invalid_certificate_request")));
-        }
-        //Get public key algorithm from CSR and check if it's allowed in certificate profile
+        RaCsrTools.validateCsr(value, this, raLocaleBean, getCertificateProfile(), requestId, false);
         try {
-            final String keySpecification = AlgorithmTools.getKeySpecification(certificateRequestMessage.getRequestPublicKey());
-            final String keyAlgorithm = AlgorithmTools.getKeyAlgorithm(certificateRequestMessage.getRequestPublicKey());
-            // If we have an End Entity, use this to verify that the algorithm and keyspec are allowed
-            final CertificateProfile certificateProfile = getCertificateProfile();
-            if (certificateProfile != null) {
-                if (!certificateProfile.isKeyTypeAllowed(keyAlgorithm, keySpecification)) {
-                    throw new ValidatorException(new FacesMessage(raLocaleBean.getMessage("enroll_key_algorithm_is_not_available", keyAlgorithm + "_" + keySpecification)));
-                }
-            } else {
-                if (log.isDebugEnabled()) {
-                    log.debug("Ignoring algorithm validation on CSR because we can not find a Certificate Profile for request with ID: " + requestId);
-                }
-            }
-            selectedAlgorithm = keyAlgorithm + " " + keySpecification; // Save for later use
-            // For yet unknown reasons, the setter is never when invoked during AJAX request
-            certificateRequest = value.toString();
-        } catch (InvalidKeyException | NoSuchAlgorithmException e) {
-            throw new ValidatorException(new FacesMessage(raLocaleBean.getMessage("enroll_unknown_key_algorithm")));
-        } catch (NoSuchProviderException e) {
-            throw new RuntimeException(e.getMessage());
+            RaCsrTools.validetaNumberOfFieldsInSubjectDn(authorizedEndEntityProfiles.get(getEndEntityInformation().getEndEntityProfileId()),
+                    getCertificateRequest(), raLocaleBean, requestId, false);
+        } catch (ValidatorException e) {
+            setSelectedAlgorithm(null);
+            certificateRequest = null;
+            throw e;
         }
     }
 
@@ -749,7 +725,7 @@ public class EnrollWithRequestIdBean implements Serializable {
                             continue;
                         }
                         final int bitLength = AlgorithmTools.getNamedEcCurveBitLength(ecNamedCurve);
-                        if (availableBitLengths.contains(Integer.valueOf(bitLength))) {
+                        if (availableBitLengths.contains(bitLength)) {
                             ecChoices.add(ecNamedCurve);
                         }
                     }
@@ -772,7 +748,7 @@ public class EnrollWithRequestIdBean implements Serializable {
                     for (final String subAlg : CesecoreConfiguration.getExtraAlgSubAlgs(algName)) {
                         final String name = CesecoreConfiguration.getExtraAlgSubAlgName(algName, subAlg);
                         final int bitLength = AlgorithmTools.getNamedEcCurveBitLength(name);
-                        if (availableBitLengths.contains(Integer.valueOf(bitLength))) {
+                        if (availableBitLengths.contains(bitLength)) {
                             availableAlgorithmSelectItems.add(new SelectItem(AlgorithmConfigurationCache.INSTANCE.getConfigurationDefinedAlgorithmTitle(algName) + "_" + name,
                                     CesecoreConfiguration.getExtraAlgSubAlgTitle(algName, subAlg)));
                         } else {
